2004-01-14  Simon Budig  <simon@gimp.org>
	* app/gui/about-dialog.c: Fixed small refresh issue.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12027 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2004-01-13  Simon Budig  <simon@gimp.org>
+2004-01-14  Simon Budig  <simon@gimp.org>
+
+	* app/gui/about-dialog.c: Fixed small refresh issue.
+
+2004-01-14  Simon Budig  <simon@gimp.org>
 
 	* data/images/gimp_logo.png: New image for the about dialog by
 	Jakub Steiner.
