Callbacks attached to the "changed" signal for of GtkTreeSelection should return void. Small cosmetics fixes also.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12029 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-14  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/plugindetails.c: callbacks attached to the "changed"
+	signal for of GtkTreeSelection should return void.
+	Small cosmetics fixes also.
+
 2004-01-14  Tor Lillqvist  <tml@iki.fi>
 
 	* app/file/file-utils.[ch]: Add new function
