2004-01-14  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am: fix typo in the uninstall-local target for
	gimp-console.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12030 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/Makefile.am: fix typo in the uninstall-local target for
+	gimp-console.
+
 2004-01-14  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/plugindetails.c: callbacks attached to the "changed"
