2004-01-14  Dave Neary  <bolsh@gimp.org>
        * app/core/gimpimage.c: get the type of the drawable, not the
        image, when transforming a TempBuf, making dragging & dropping
        patterns on layer masks work correctly. Fixes bug #131146.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12033 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-14  Dave Neary  <bolsh@gimp.org>
+
+	* app/core/gimpimage.c: get the type of the drawable, not the 
+	image, when transforming a TempBuf, making dragging & dropping 
+	patterns on layer masks work correctly. Fixes bug #131146.
+
 2004-01-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage.h: added GIMP_IMAGE_TYPE_WITHOUT_ALPHA()
