* plug-ins/common/plugindetails.c: clean up the code (use 	gimp_table_attach_aligned() where needed).
	* plug-ins/dbbrowser/dbbrowser.c:
	* plug-ins/dbbrowser/dbbrowser_utils.c: changed tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12034 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-15  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/plugindetails.c: clean up the code (use
+	gimp_table_attach_aligned() where needed).
+
+	* plug-ins/dbbrowser/dbbrowser.c:
+	* plug-ins/dbbrowser/dbbrowser_utils.c: changed tabs to spaces.
+
 2004-01-14  Dave Neary  <bolsh@gimp.org>
 
 	* app/core/gimpimage.c: get the type of the drawable, not the 
