--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Manish Singh  <yosh@gimp.org>
+
+	* app/config/gimpconfig-utils.c: #include "file/file-utils.h" for
+	file_utils_filename_to_utf8.
+
 2004-01-15  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/plugindetails.c: clean up the code (use
