--- a/tips/sr@Latn.po
+++ b/tips/sr@Latn.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-tips 1.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
-"PO-Revision-Date: 2004-01-10 04:31+0100\n"
+"POT-Creation-Date: 2004-01-15 07:32+0100\n"
+"PO-Revision-Date: 2004-01-15 07:35+0100\n"
 "Last-Translator: Aleksandar Urošević <urke@users.sourceforge.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -47,9 +47,9 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:5
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
-msgstr "<tt>Ctrl</tt>-prevlačenje sa alatom za transformacije pri rotaciji će ograničiti rotaciju na uglove koji su umnožak 15 stepeni."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
+msgstr "<tt>Ctrl</tt>-prevlačenje sa alatom za rotaciju će ograničiti rotaciju na uglove koji su umnožak 15 stepeni."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -76,9 +76,9 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
-msgstr "Nakon što omogućite dinamičke prečice sa tastature u prozorčetu za postavke, moći ćete da promenite prečice. To radite tako što prikažete meni, izaberete stavku menija, i pritisnete željenu kombinaciju tastera. Izmene će biti sačuvane kada zatvorite GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
+msgstr "Nakon što omogućite dinamičke prečice sa tastature u prozorčetu za postavke, moći ćete da promenite prečice. To radite tako što prikažete meni, izaberete stavku menija, i pritisnete željenu kombinaciju tastera. Ukoliko je uključeno čuvanje prečica sa tastature, izmene će biti sačuvane kada zatvorite GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -105,10 +105,10 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:11
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
-msgstr "Ukoliko iscrtate putanju (Uređivanje-&gt;Iscrtaj izbor), koristi se tekući alat za crtanje i njegova podešavanja. Možete koristiti četkicu u režimu pretapanja, alat kloniranja sa mustrom ili čak gumicu za brisanje ili alat za razmazivanje."
+"If you stroke a path (Edit-&gt;Stroke Selection), the paint tools can be "
+"used with their current settings. You can use the Paintbrush in gradient "
+"mode or even the Eraser or the Smudge tool."
+msgstr "Ukoliko iscrtate putanju (Uređivanje-&gt;Iscrtaj izbor), koristi se tekući alat za crtanje i njegova podešavanja. Možete koristiti četkicu u režimu pretapanja, gumicu za brisanje ili alat za razmazivanje."
 
 #: tips/gimp-tips.xml.in.h:12
 msgid ""
@@ -122,7 +122,7 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:13
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "Većina dodataka vrši izmene na tekućem sloju tekuće slike. U nekim "
@@ -142,8 +142,8 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Ne mogu se svi efekti primeniti na sve vrste slika. Ovo se označava "
 "onemogućenom stavkom menija. Možda je potrebno promeniti režim slike na RGB "
@@ -221,17 +221,6 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Upotrebom Uređivanje-&gt;Iscrtaj možete crtati jednostavne kvadrate i "
-"krugove. Ovo iscrtava ivice tekućeg izbora pomoću aktivne četkice. Složeniji "
-"oblici se mogu crtati pomoću alata za putanje ili Filteri-&gt;Iscrtavanje-&gt;"
-"Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
-msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
 "cursor position. If you also press <tt>Ctrl</tt>, the line will be "
@@ -242,7 +231,7 @@ msgstr ""
 "pozicije kursora. Ako pritisnete <tt>Ctrl</tt>, moći ćete da liniju rotirate "
 "pod uglom od 15°."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -254,13 +243,17 @@ msgstr ""
 "Na ovaj način će slojevi i svi aspekti Vaše „obrade u toku“ biti sačuvani. "
 "Jednom kada završite projekat, možete ga sačuvati kao JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Možete prilagoditi i zameniti selekciju upotrebom kombinacije <tt>Alt</tt>-"
-"povlačenje."
+"Možete prilagoditi i razmestiti izbor upotrebom <tt>Alt</tt>-prevlačenja. "
+"Ukoliko se tada vaš prozor pomeri, onda vaš upravnik prozorima već koristi "
+"<tt>Alt</tt> taster. Pokušajte sa pritiskom na <tt>Shift</tt> istovremeno."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -268,14 +261,14 @@ msgstr ""
 "Možete prilagoditi oblast selekcije za nejasnu selekciju ako kliknete i "
 "prevlačite kursor levo i desno."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
-msgstr "Možete napraviti i uređivati složene izbore pomoću Bezijerovog alata za putanje. Prozorče za putanje dozvoljava rad sa više putanja i pretvaranje istih u izbore."
+msgstr "Možete napraviti i uređivati složene izbore pomoću alata za putanje. Prozorče za putanje dozvoljava rad sa više putanja i pretvaranje istih u izbore."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -284,7 +277,7 @@ msgstr ""
 "na paletu alata. Na taj način će se napraviti nova slika koja sadrži samo "
 "taj sloj."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -293,6 +286,13 @@ msgstr ""
 "Možete prevući i pustiti puno stvari u Gimpu. Na primer, prevlačenjem boje sa "
 "palete alata ili sa palete boja i puštanjem na sliku, učinićete da se slika "
 "ili selekcija oboje odabranom bojom."
+
+#: tips/gimp-tips.xml.in.h:29
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr "Upotrebom Uređivanje-&gt;Iscrtaj možete crtati jednostavne kvadrate i krugove. Ovo iscrtava ivice tekućeg izbora. Složeniji oblici se mogu crtati pomoću alata za putanje ili Filteri-&gt;Iscrtavanje-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -361,15 +361,10 @@ msgstr ""
 "želji bojenjem po slici i ponovo kliknite na ovo dugme da bi se maska "
 "pretvorila nazad u običan izbor."
 
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
 #~ msgstr ""
-#~ "Možete prilagoditi i razmestiti izbor upotrebom <tt>Alt</tt>-prevlačenja. "
-#~ "Ukoliko se tada vaš prozor pomeri, onda vaš upravnik prozorima već "
-#~ "koristi <tt>Alt</tt> taster. Pokušajte sa pritiskom na <tt>Shift</tt> "
-#~ "istovremeno."
+#~ "Možete prilagoditi i zameniti selekciju upotrebom kombinacije <tt>Alt</"
+#~ "tt>-povlačenje."
 
 #~ msgid ""
 #~ "If your fonts turn out blocky, that's because they're not scalable fonts. "
