2004-01-15  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: added plug-ins/helpbrowser/domain.c


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12046 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-15  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: added plug-ins/helpbrowser/domain.c
+
 2004-01-12  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation by Anatoly (Doc) Yakushin.
