2004-01-15  Manish Singh  <yosh@gimp.org>
        * app/text/gimpfontlist.c: Set PangoStretch from FC_WIDTH. This
        partially addresses #131561 (namely, the gimp side).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12047 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  Manish Singh  <yosh@gimp.org>
+
+	* app/text/gimpfontlist.c: Set PangoStretch from FC_WIDTH. This
+	partially addresses #131561 (namely, the gimp side).
+
 2004-01-15  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/helpbrowser/helpbrowser.c: removed
