--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/nova.c: Re-write some parts of the algorithm.
+	This should fix #82464, #71922 and #121966.
+
 2004-01-15  Manish Singh  <yosh@gimp.org>
 
 	* app/text/gimpfontlist.c: Set PangoStretch from FC_WIDTH. This
