--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-15  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* app/gui/file-save-menu.c (file_save_menu_update): Removed the
+	code that disables save formats conditionally, making all of
+	them available. Fixes bug #110610.
+
 2004-01-15  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/nova.c: Re-write some parts of the algorithm.
