* plug-ins/common/nova.c: Do not display the color button or the 	"Random Hue" range when applying to a grayscale image.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12050 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/nova.c: Do not display the color button or the
+	"Random Hue" range when applying to a grayscale image.
+
 2004-01-15  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* app/gui/file-save-menu.c (file_save_menu_update): Removed the
