2004-01-16  Jan MorÃ©n  <jan.moren@lucs.lu.se>
         * sv.po: Updated Swedish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12052 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-16  Jan Morén  <jan.moren@lucs.lu.se>
+
+        * sv.po: Updated Swedish translation.
+
 2004-01-12  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation by Anatoly (Doc) Yakushin.
