2004-01-16  Michael Natterer  <mitch@gimp.org>
	* app/gui/edit-commands.[ch]: converted tabs to spaces.

	(cut,copy_named_buffer_callback): unref the buffer after adding it
	to gimp->named_buffers. Seems we leaked all named buffers...

	Removed code duplication I have just introduced:

	* app/gui/edit-commands.[ch] removed
	edit_paste_into_cmd_callback(). Instead, pass the "paste_into"
	boolean as "guint action" to gimp_edit_paste_cmd_callback().

	* app/gui/image-menu.c: changed accordingly.

	* app/widgets/gimpbufferview.c: added utility function
	gimp_buffer_view_paste() and call it from the paste and paste_into
	callbacks.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12053 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2004-01-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/edit-commands.[ch]: converted tabs to spaces.
+
+	(cut,copy_named_buffer_callback): unref the buffer after adding it
+	to gimp->named_buffers. Seems we leaked all named buffers...
+
+	Removed code duplication I have just introduced:
+
+	* app/gui/edit-commands.[ch] removed
+	edit_paste_into_cmd_callback(). Instead, pass the "paste_into"
+	boolean as "guint action" to gimp_edit_paste_cmd_callback().
+
+	* app/gui/image-menu.c: changed accordingly.
+
+	* app/widgets/gimpbufferview.c: added utility function
+	gimp_buffer_view_paste() and call it from the paste and paste_into
+	callbacks.
+
 2004-01-15  Manish Singh  <yosh@gimp.org>
 
 	* app/text/gimpfontlist.c: Minor cleanup, add note about using
