2004-01-16  Dave Neary  <bolsh@gimp.org>
        * NEWS: Update NEWS file again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12054 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-16  Dave Neary  <bolsh@gimp.org>
+
+	* NEWS: Update NEWS file again.
+
 2004-01-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/edit-commands.[ch]: converted tabs to spaces.
