2004-01-16  Sven Neumann  <sven@gimp.org>
	* app/gui/menus.c (menus_init): fixed typo (bug #131670).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12055 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-16  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/menus.c (menus_init): fixed typo (bug #131670).
+
 2004-01-16  Dave Neary  <bolsh@gimp.org>
 
 	* NEWS: Update NEWS file again.
