2004-01-16  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpcroptool.c (crop_recalc): do a proper fix for bug
	#131680.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12057 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,13 @@
+2004-01-16  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcroptool.c (crop_recalc): do a proper fix for bug
+	#131680.
+
 2004-01-15  DindinX  <david@dindinx.org>
 
-	* app/tools/gimpcroptool.c: bloc some signals before destroying the
-	info dialog box, to prevent accessing to freed memory
-	fixes bug #131680
+	* app/tools/gimpcroptool.c: block some signals before destroying
+	the info dialog box, to prevent accessing to freed memory fixes
+	bug #131680
 
 2004-01-16  Sven Neumann  <sven@gimp.org>
 
