--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/plugindetails.c: some cleanup, restore old internal
+	names.
+
 2004-01-17  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpguiconfig.[ch]
