--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-17  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2004-01-15  Michael Natterer  <mitch@gimp.org>
 
 	* POTFILES.in: added plug-ins/helpbrowser/domain.c
