* plug-ins/pygimp/gimpfu.py: Show the description of params in dialog 	boxes, rather than the internal variable name.  This is more 	consistent with script-fu.  (reported by Florian Traverse)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12063 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-17  DindinX  <david@dindinx.org>
+
+	* plug-ins/pygimp/gimpfu.py: Show the description of params in dialog
+	boxes, rather than the internal variable name.  This is more
+	consistent with script-fu.  (reported by Florian Traverse)
+
 2004-01-16  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/plugindetails.c: some cleanup, restore old internal
