2004-01-17 Henrik Brix Andersen <brix@gimp.org>
* app/core/gimpimage-snap.c (gimp_image_snap_point): forgot to
change two G_MAXINT to G_MAXDOUBLE.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12066 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-17  Henrik Brix Andersen  <brix@gimp.org>
 
+	* app/core/gimpimage-snap.c (gimp_image_snap_point): forgot to
+	change two G_MAXINT to G_MAXDOUBLE.
+
+2004-01-17  Henrik Brix Andersen  <brix@gimp.org>
+
 	Finally fixed bug #125864:
 
 	* app/core/gimpimage-guides.c (gimp_image_find_guide): iterate
