--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-18  Simon Budig  <simon@gimp.org>
 
+	* app/gui/about-dialog.c: fixed typo.
+
+2004-01-18  Simon Budig  <simon@gimp.org>
+
 	* app/gui/about-dialog.c: make sure we always properly use
 	the size of the logo image. Place the text at the bottom
 	of the image when the size changes (position of the version
